# AED-Proyecto-QuadTree

./: CMakeLists.txt  README.md
Informe/: Informe.tex
codigo/include/: DataStructures.h  Enemy.h  Entity.h  FloatingText.h  Particle.h  Player.h  PowerUp.h  Projectile.h  Quadtree.h
codigo/src/: Enemy.cpp  Player.cpp  PowerUp.cpp  Projectile.cpp  Quadtree.cpp  main.cpp
